[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "akasha-time-nexus"
version = "0.1.0"
description = "Akasha-native temporal context engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
akasha-time-nexus = "akasha_time_nexus.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["akasha_time_nexus*"]
